CSS spacing fix for archive page.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -101,7 +101,7 @@ h4, h5, h6 {
 		padding-inline-start: 0;
 		border-left: 0.25rem solid #2f2f2f;
 		padding-left: 0.5rem;
-		margin: 0 0 2.4rem 0;
+		margin: -1rem 0 4rem 0;
 	}
 		.main ul.categories>li {
 			list-style-type: none;
